python/Hamiltonian/data/res.txt
ModuleCmd_Load.c(213):ERROR:105: Unable to locate a modulefile for 'anaconda3'
  File "level_stats.py", line 31
    S2 = X@X + Y@Y + Z@Z
          ^
SyntaxError: invalid syntax
